Seting up the server connection and saving the users

--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,11 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="lol">League of legends</option>
-							<option value="wow">World of warcraft</option>
-							<option value="APB">APB Reloaded</option>
-							<option value="AmongUs">Among Us</option>
-							<option value="LMA">Leave me alone room</option>
+							<option value="League of legends">League of legends</option>
+							<option value="World of warcraft">World of warcraft</option>
+							<option value="APB Reloaded">APB Reloaded</option>
+							<option value="Among Us">Among Us</option>
+							<option value="Leave me alone room">Leave me alone room</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
